# CircEye

./: .gitignore  README.md  build_log.txt  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  main.tsx  steer.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src/components/: AblationComparison.tsx  AblationPanel.tsx  AttentionViz.tsx  CircuitGraph.tsx  CircuitInsights.tsx  ExplanationPanel.tsx  LogitLens.tsx  ModelLoader.tsx  PromptInput.tsx  SteeringPanel.tsx  VectorLab.tsx
src/hooks/: useAblation.ts  useRealAblation.ts  useTransformers.ts
src/utils/: circuitDetection.ts  exportViz.ts  vectorMath.ts
